// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedText matches the snapshot for default type 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Snapshot Text
</Text>
`;

exports[`ThemedText matches the snapshot for title type 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
      {
        "fontSize": 28,
        "fontWeight": "bold",
        "lineHeight": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Snapshot Title
</Text>
`;
